fix: nav a letter-spacing

--- a/src/app/assets/scss/components/nav/_nav.scss
+++ b/src/app/assets/scss/components/nav/_nav.scss
@@ -12,6 +12,7 @@
         padding-bottom: 19px;
         border-bottom: 2px solid transparent;
         color: #101A46;
+        letter-spacing: 1.1px;
 
         +a {
             margin-left: 30px;
